--- a/style.css
+++ b/style.css
@@ -230,9 +230,14 @@ h2 {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     .main {
         flex-direction: column;
+    }
+
+    h3 {
+
+        font-size: 52px;
     }
 
     .main-hero {
@@ -279,7 +284,7 @@ h2 {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     .about {
         flex-direction: column;
     }
@@ -336,7 +341,7 @@ h2 {
 .blog-ul {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     margin-left: 48px;
 }
 
@@ -354,6 +359,7 @@ h2 {
     font-size: 24px;
     margin-top: 4px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
 
     a {
@@ -383,7 +389,7 @@ h2 {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     .blog-ul {
 
         margin: 0;
@@ -427,7 +433,7 @@ footer {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     .desktop-only {
         display: none;
     }
